overflow fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 :root {
@@ -9,7 +10,7 @@
 }
 
 body {
-    width: 100%;
+    min-width: 100%;
     font-family: 'Montserrat', sans-serif;
     color: #1C1C1C;
     overflow-x: hidden;
@@ -252,6 +253,7 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     .download-text {
         width: 100%;
